# OpsConnect

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  settings.py
app/adapters/: redis_adapter.py
app/adapters/api/v1/: routes.py
app/adapters/db/: orm.py  repository.py  sessions.py
app/core/: ports.py
app/core/domain/: models.py
app/core/use_cases/: ingest.py
app/infra/: dependencies.py  logging_conf.py  telemetry.py
migrations/: env.py
