[tool.poetry]
name = "opsconnect"
version = "0.1.0"
description = "Secure Data Integration Middleware with Hexagonal Architecture"
authors = ["Shorya"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
# The "Senior" Database Stack
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
# The "Senior" Observability Stack
structlog = "^24.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
# Configuration
pydantic-settings = "^2.1.0"
# Resilience
redis = "^5.0.1"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0" # For testing async endpoints
ruff = "^0.1.14"  # The fastest linter in the world

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configuration (The "Clean Code" flex) ---
[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Enable Pyflakes, pycodestyle, and isort

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]